--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Js Level 3 Projects</title>
+    <title>Js  Projects</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/JavaScript.ico" type="image/x-icon" />
