Delete Defer On Slider Show js file

--- a/Other Projects.html
+++ b/Other Projects.html
@@ -25,7 +25,7 @@
   <!-- Change Color & Bg -->
   <script defer src="javascript/1- Change_Color.js"></script>
   <!-- js File7 SlideShow -->
-  <script defer src="javascript/7-slideShow.js"></script>
+  <script  src="javascript/7-slideShow.js"></script>
   <!-- js File8 Toggle Tabs -->
   <script defer src="javascript/8-togglesTabs.js"></script>
   <!-- js File9 Toggle Tabs -->
